# ixray-1.6-stcop

./: CMakeLists.txt
src/: CMakeLists.txt
src/xrEngine/: CMakeLists.txt  Device_create_render.cpp  Environment.cpp  IGame_Actor.cpp  IGame_Actor.h  IGame_Level.h  Render.h  SkeletonMotions.cpp  date_time.cpp  device.h  stdafx.h
src/xrGame/: Actor.cpp  Actor.h  ActorAnimation.cpp  ActorCameras.cpp  ActorInput.cpp  Actor_Flags.h  Actor_Movement.cpp  Artefact.h  Car.h  CustomDetector.cpp  CustomDetector.h  CustomMonster.cpp  EffectorBobbing.cpp  Explosive.h  GameObject.cpp  GamePersistent.cpp  HelicopterMovementManager.cpp  HudItem.cpp  Inventory.cpp  Level.cpp  Level.h  Level_load.cpp  Level_network_spawn.cpp  Missile.cpp  MosquitoBald.h  PHMovementControl.cpp  PhysicObject.h  RadioactiveZone.h  ShootingObject.h  StdAfx.h  UIGameCustom.cpp  Weapon.cpp  Weapon.h  WeaponMagazined.cpp  (+29 more)
src/xrUICore/: CMakeLists.txt  UIAnimatedStatic.cpp  UIAnimatedStatic.h  UIBtnHint.cpp  UIButton.cpp  UIButton.h  UIButton_script.cpp  UICellItem.cpp  UICellItem.h  UICellItemFactory.cpp  UICheckButton.h  UIComboBox.cpp  UIComboBox.h  UICursor.cpp  UICursor.h  UICustomEdit.cpp  UICustomSpin.h  UIDialogHolder.cpp  UIDialogHolder.h  UIDialogWnd.cpp  UIDialogWnd.h  UIDragDropListEx.cpp  UIDragDropListEx.h  UIDragDropReferenceList.cpp  UIDragDropReferenceList.h  UIEditBox.h  UIEditBoxEx.h  UIEditBox_script.cpp  UIFixedScrollBar.cpp  UIFrameLineWnd.cpp  UIFrameLineWnd.h  UIFrameWindow.cpp  UIFrameWindow.h  UIHint.cpp  UIHint.h  UILabel.cpp  UILanimController.h  UILine.cpp  UILine.h  UILines.cpp  (+45 more)
(+87 files in other folders)
